// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parser > error exit outside conditional 1`] = `
[
  {
    "level": "error",
    "message": "Exit action can only be used in conditionals",
    "span": Span {
      "end": 4,
      "start": 0,
    },
  },
]
`;

exports[`Parser > error invalid stat actions 1`] = `
[
  {
    "level": "error",
    "message": "Expected stat name",
    "span": Span {
      "end": 6,
      "start": 5,
    },
  },
  {
    "level": "error",
    "message": "Expected amount",
    "span": Span {
      "end": 27,
      "start": 18,
    },
  },
  {
    "level": "error",
    "message": "Expected operation",
    "span": Span {
      "end": 36,
      "start": 35,
    },
  },
  {
    "level": "error",
    "message": "Expected stat name",
    "span": Span {
      "end": 41,
      "start": 41,
    },
  },
]
`;

exports[`Parser > error invalid stat names 1`] = `
[
  {
    "level": "error",
    "message": "Stat name exceeds 16-character limit",
    "span": Span {
      "end": 23,
      "start": 5,
    },
  },
  {
    "level": "error",
    "message": "Stat name cannot be empty",
    "span": Span {
      "end": 35,
      "start": 33,
    },
  },
  {
    "level": "error",
    "message": "Stat name cannot contain spaces",
    "span": Span {
      "end": 58,
      "start": 46,
    },
  },
]
`;

exports[`Parser > error limits surpassed 1`] = `
[
  {
    "level": "error",
    "message": "Limit of 5 random actions exceeded",
    "span": Span {
      "end": 60,
      "start": 51,
    },
  },
]
`;

exports[`Parser > error nested conditionals 1`] = `
[
  {
    "level": "error",
    "message": "Cannot use a conditional inside of a conditional",
    "span": Span {
      "end": 14,
      "start": 12,
    },
  },
]
`;

exports[`Parser > error number above integer limit 1`] = `
[
  {
    "level": "error",
    "message": "Number exceeds 64-bit integer limit",
    "span": Span {
      "end": 40,
      "start": 9,
    },
  },
]
`;

exports[`Parser > parse conditionals 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": Span {
          "end": 278,
          "start": 0,
        },
        "value": [
          {
            "conditions": {
              "span": Span {
                "end": 5,
                "start": 3,
              },
              "value": [],
            },
            "ifActions": {
              "span": Span {
                "end": 25,
                "start": 6,
              },
              "value": [
                {
                  "kwSpan": Span {
                    "end": 16,
                    "start": 12,
                  },
                  "message": {
                    "span": Span {
                      "end": 23,
                      "start": 17,
                    },
                    "value": "true",
                  },
                  "span": Span {
                    "end": 23,
                    "start": 12,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": Span {
              "end": 2,
              "start": 0,
            },
            "matchAny": {
              "span": Span {
                "end": 2,
                "start": 3,
              },
              "value": false,
            },
            "span": Span {
              "end": 26,
              "start": 0,
            },
            "type": "CONDITIONAL",
          },
          {
            "holder": {
              "span": Span {
                "end": 31,
                "start": 32,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 31,
              "start": 27,
            },
            "op": {
              "span": Span {
                "end": 35,
                "start": 34,
              },
              "value": "set",
            },
            "span": Span {
              "end": 38,
              "start": 27,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 38,
                "start": 36,
              },
              "value": 10n,
            },
            "var": {
              "span": Span {
                "end": 33,
                "start": 32,
              },
              "value": "x",
            },
          },
          {
            "conditions": {
              "span": Span {
                "end": 59,
                "start": 47,
              },
              "value": [
                {
                  "amount": {
                    "span": Span {
                      "end": 58,
                      "start": 57,
                    },
                    "value": 5n,
                  },
                  "holder": {
                    "span": Span {
                      "end": 52,
                      "start": 53,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": Span {
                      "end": 48,
                      "start": 48,
                    },
                    "value": false,
                  },
                  "kwSpan": Span {
                    "end": 52,
                    "start": 48,
                  },
                  "op": {
                    "span": Span {
                      "end": 56,
                      "start": 55,
                    },
                    "value": "greater_than",
                  },
                  "span": Span {
                    "end": 58,
                    "start": 48,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": Span {
                      "end": 54,
                      "start": 53,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "elseActions": {
              "span": Span {
                "end": 105,
                "start": 85,
              },
              "value": [
                {
                  "kwSpan": Span {
                    "end": 95,
                    "start": 91,
                  },
                  "message": {
                    "span": Span {
                      "end": 103,
                      "start": 96,
                    },
                    "value": "false",
                  },
                  "span": Span {
                    "end": 103,
                    "start": 91,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "ifActions": {
              "span": Span {
                "end": 79,
                "start": 60,
              },
              "value": [
                {
                  "kwSpan": Span {
                    "end": 70,
                    "start": 66,
                  },
                  "message": {
                    "span": Span {
                      "end": 77,
                      "start": 71,
                    },
                    "value": "true",
                  },
                  "span": Span {
                    "end": 77,
                    "start": 66,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": Span {
              "end": 42,
              "start": 40,
            },
            "matchAny": {
              "span": Span {
                "end": 46,
                "start": 43,
              },
              "value": false,
            },
            "span": Span {
              "end": 105,
              "start": 40,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": Span {
                "end": 137,
                "start": 110,
              },
              "value": [
                {
                  "amount": {
                    "span": Span {
                      "end": 122,
                      "start": 121,
                    },
                    "value": 5n,
                  },
                  "holder": {
                    "span": Span {
                      "end": 115,
                      "start": 116,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": Span {
                      "end": 111,
                      "start": 111,
                    },
                    "value": false,
                  },
                  "kwSpan": Span {
                    "end": 115,
                    "start": 111,
                  },
                  "op": {
                    "span": Span {
                      "end": 120,
                      "start": 118,
                    },
                    "value": "equals",
                  },
                  "span": Span {
                    "end": 122,
                    "start": 111,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": Span {
                      "end": 117,
                      "start": 116,
                    },
                    "value": "x",
                  },
                },
                {
                  "amount": {
                    "span": Span {
                      "end": 136,
                      "start": 134,
                    },
                    "value": 10n,
                  },
                  "holder": {
                    "span": Span {
                      "end": 128,
                      "start": 129,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": Span {
                      "end": 123,
                      "start": 124,
                    },
                    "value": false,
                  },
                  "kwSpan": Span {
                    "end": 128,
                    "start": 124,
                  },
                  "op": {
                    "span": Span {
                      "end": 133,
                      "start": 131,
                    },
                    "value": "equals",
                  },
                  "span": Span {
                    "end": 136,
                    "start": 124,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": Span {
                      "end": 130,
                      "start": 129,
                    },
                    "value": "y",
                  },
                },
              ],
            },
            "ifActions": {
              "span": Span {
                "end": 142,
                "start": 138,
              },
              "value": [],
            },
            "kwSpan": Span {
              "end": 109,
              "start": 107,
            },
            "matchAny": {
              "span": Span {
                "end": 109,
                "start": 110,
              },
              "value": false,
            },
            "span": Span {
              "end": 143,
              "start": 107,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": Span {
                "end": 176,
                "start": 147,
              },
              "value": [
                {
                  "amount": {
                    "span": Span {
                      "end": 161,
                      "start": 159,
                    },
                    "value": 10n,
                  },
                  "holder": {
                    "span": Span {
                      "end": 153,
                      "start": 154,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": Span {
                      "end": 149,
                      "start": 148,
                    },
                    "value": true,
                  },
                  "kwSpan": Span {
                    "end": 153,
                    "start": 149,
                  },
                  "op": {
                    "span": Span {
                      "end": 158,
                      "start": 156,
                    },
                    "value": "equals",
                  },
                  "span": Span {
                    "end": 161,
                    "start": 149,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": Span {
                      "end": 155,
                      "start": 154,
                    },
                    "value": "x",
                  },
                },
                {
                  "amount": {
                    "span": Span {
                      "end": 175,
                      "start": 174,
                    },
                    "value": 5n,
                  },
                  "holder": {
                    "span": Span {
                      "end": 168,
                      "start": 169,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": Span {
                      "end": 164,
                      "start": 163,
                    },
                    "value": true,
                  },
                  "kwSpan": Span {
                    "end": 168,
                    "start": 164,
                  },
                  "op": {
                    "span": Span {
                      "end": 173,
                      "start": 171,
                    },
                    "value": "equals",
                  },
                  "span": Span {
                    "end": 175,
                    "start": 164,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": Span {
                      "end": 170,
                      "start": 169,
                    },
                    "value": "y",
                  },
                },
              ],
            },
            "ifActions": {
              "span": Span {
                "end": 181,
                "start": 177,
              },
              "value": [],
            },
            "kwSpan": Span {
              "end": 146,
              "start": 144,
            },
            "matchAny": {
              "span": Span {
                "end": 146,
                "start": 147,
              },
              "value": false,
            },
            "span": Span {
              "end": 182,
              "start": 144,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": Span {
                "end": 198,
                "start": 186,
              },
              "value": [
                {
                  "amount": {
                    "span": Span {
                      "end": 197,
                      "start": 196,
                    },
                    "value": 5n,
                  },
                  "holder": {
                    "span": Span {
                      "end": 191,
                      "start": 192,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "inverted": {
                    "span": Span {
                      "end": 187,
                      "start": 187,
                    },
                    "value": false,
                  },
                  "kwSpan": Span {
                    "end": 191,
                    "start": 187,
                  },
                  "op": {
                    "span": Span {
                      "end": 195,
                      "start": 194,
                    },
                    "value": "less_than",
                  },
                  "span": Span {
                    "end": 197,
                    "start": 187,
                  },
                  "type": "COMPARE_VAR",
                  "var": {
                    "span": Span {
                      "end": 193,
                      "start": 192,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "elseActions": {
              "span": Span {
                "end": 236,
                "start": 220,
              },
              "value": [
                {
                  "kwSpan": Span {
                    "end": 226,
                    "start": 222,
                  },
                  "message": {
                    "span": Span {
                      "end": 234,
                      "start": 227,
                    },
                    "value": "false",
                  },
                  "span": Span {
                    "end": 234,
                    "start": 222,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "ifActions": {
              "span": Span {
                "end": 214,
                "start": 199,
              },
              "value": [
                {
                  "kwSpan": Span {
                    "end": 205,
                    "start": 201,
                  },
                  "message": {
                    "span": Span {
                      "end": 212,
                      "start": 206,
                    },
                    "value": "true",
                  },
                  "span": Span {
                    "end": 212,
                    "start": 201,
                  },
                  "type": "MESSAGE",
                },
              ],
            },
            "kwSpan": Span {
              "end": 185,
              "start": 183,
            },
            "matchAny": {
              "span": Span {
                "end": 185,
                "start": 186,
              },
              "value": false,
            },
            "span": Span {
              "end": 236,
              "start": 183,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": Span {
                "end": 246,
                "start": 244,
              },
              "value": [],
            },
            "ifActions": {
              "span": Span {
                "end": 249,
                "start": 247,
              },
              "value": [],
            },
            "kwSpan": Span {
              "end": 240,
              "start": 238,
            },
            "matchAny": {
              "span": Span {
                "end": 243,
                "start": 241,
              },
              "value": true,
            },
            "span": Span {
              "end": 250,
              "start": 238,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": Span {
                "end": 260,
                "start": 258,
              },
              "value": [],
            },
            "ifActions": {
              "span": Span {
                "end": 263,
                "start": 261,
              },
              "value": [],
            },
            "kwSpan": Span {
              "end": 252,
              "start": 250,
            },
            "matchAny": {
              "span": Span {
                "end": 257,
                "start": 253,
              },
              "value": true,
            },
            "span": Span {
              "end": 264,
              "start": 250,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": Span {
                "end": 275,
                "start": 273,
              },
              "value": [],
            },
            "ifActions": {
              "span": Span {
                "end": 278,
                "start": 276,
              },
              "value": [],
            },
            "kwSpan": Span {
              "end": 266,
              "start": 264,
            },
            "matchAny": {
              "span": Span {
                "end": 272,
                "start": 267,
              },
              "value": false,
            },
            "span": Span {
              "end": 278,
              "start": 264,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": Span {
        "end": 0,
        "start": 0,
      },
      "span": Span {
        "end": 278,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse global stats 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": Span {
          "end": 76,
          "start": 0,
        },
        "value": [
          {
            "holder": {
              "span": Span {
                "end": 10,
                "start": 11,
              },
              "value": {
                "type": "global",
              },
            },
            "kwSpan": Span {
              "end": 10,
              "start": 0,
            },
            "op": {
              "span": Span {
                "end": 14,
                "start": 13,
              },
              "value": "set",
            },
            "span": Span {
              "end": 16,
              "start": 0,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 16,
                "start": 15,
              },
              "value": 5n,
            },
            "var": {
              "span": Span {
                "end": 12,
                "start": 11,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 27,
                "start": 28,
              },
              "value": {
                "type": "global",
              },
            },
            "kwSpan": Span {
              "end": 27,
              "start": 17,
            },
            "op": {
              "span": Span {
                "end": 31,
                "start": 30,
              },
              "value": "set",
            },
            "span": Span {
              "end": 44,
              "start": 17,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 44,
                "start": 32,
              },
              "value": "%stat.global/x%",
            },
            "var": {
              "span": Span {
                "end": 29,
                "start": 28,
              },
              "value": "y",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 55,
                "start": 56,
              },
              "value": {
                "type": "global",
              },
            },
            "kwSpan": Span {
              "end": 55,
              "start": 45,
            },
            "op": {
              "span": Span {
                "end": 59,
                "start": 58,
              },
              "value": "set",
            },
            "span": Span {
              "end": 76,
              "start": 45,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 76,
                "start": 60,
              },
              "value": "%stat.global/y%",
            },
            "var": {
              "span": Span {
                "end": 57,
                "start": 56,
              },
              "value": "z",
            },
          },
        ],
      },
      "kwSpan": Span {
        "end": 0,
        "start": 0,
      },
      "span": Span {
        "end": 76,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse omitted fields 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": Span {
          "end": 138,
          "start": 0,
        },
        "value": [
          {
            "kwSpan": Span {
              "end": 5,
              "start": 0,
            },
            "span": Span {
              "end": 14,
              "start": 0,
            },
            "title": {
              "span": Span {
                "end": 14,
                "start": 6,
              },
              "value": "Hello!",
            },
            "type": "TITLE",
          },
          {
            "kwSpan": Span {
              "end": 20,
              "start": 15,
            },
            "span": Span {
              "end": 54,
              "start": 15,
            },
            "subtitle": {
              "span": Span {
                "end": 54,
                "start": 37,
              },
              "value": "Goodbye, world!",
            },
            "title": {
              "span": Span {
                "end": 36,
                "start": 21,
              },
              "value": "Hello, World!",
            },
            "type": "TITLE",
          },
          {
            "fadein": {
              "span": Span {
                "end": 81,
                "start": 80,
              },
              "value": 1,
            },
            "fadeout": {
              "span": Span {
                "end": 85,
                "start": 84,
              },
              "value": 1,
            },
            "kwSpan": Span {
              "end": 60,
              "start": 55,
            },
            "span": Span {
              "end": 85,
              "start": 55,
            },
            "stay": {
              "span": Span {
                "end": 83,
                "start": 82,
              },
              "value": 5,
            },
            "subtitle": {
              "span": Span {
                "end": 79,
                "start": 69,
              },
              "value": "Subtitle",
            },
            "title": {
              "span": Span {
                "end": 68,
                "start": 61,
              },
              "value": "Title",
            },
            "type": "TITLE",
          },
          {
            "function": {
              "span": Span {
                "end": 111,
                "start": 96,
              },
              "value": "MyFunction :)",
            },
            "kwSpan": Span {
              "end": 95,
              "start": 87,
            },
            "span": Span {
              "end": 111,
              "start": 87,
            },
            "type": "FUNCTION",
          },
          {
            "function": {
              "span": Span {
                "end": 133,
                "start": 121,
              },
              "value": "MyFunction",
            },
            "global": {
              "span": Span {
                "end": 138,
                "start": 134,
              },
              "value": true,
            },
            "kwSpan": Span {
              "end": 120,
              "start": 112,
            },
            "span": Span {
              "end": 138,
              "start": 112,
            },
            "type": "FUNCTION",
          },
        ],
      },
      "kwSpan": Span {
        "end": 0,
        "start": 0,
      },
      "span": Span {
        "end": 138,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse placeholders 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": Span {
          "end": 666,
          "start": 0,
        },
        "value": [
          {
            "holder": {
              "span": Span {
                "end": 4,
                "start": 5,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 4,
              "start": 0,
            },
            "op": {
              "span": Span {
                "end": 8,
                "start": 7,
              },
              "value": "set",
            },
            "span": Span {
              "end": 22,
              "start": 0,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 22,
                "start": 9,
              },
              "value": "%player.ping%",
            },
            "var": {
              "span": Span {
                "end": 6,
                "start": 5,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 27,
                "start": 28,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 27,
              "start": 23,
            },
            "op": {
              "span": Span {
                "end": 31,
                "start": 30,
              },
              "value": "set",
            },
            "span": Span {
              "end": 47,
              "start": 23,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 47,
                "start": 32,
              },
              "value": "%player.health%",
            },
            "var": {
              "span": Span {
                "end": 29,
                "start": 28,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 52,
                "start": 53,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 52,
              "start": 48,
            },
            "op": {
              "span": Span {
                "end": 56,
                "start": 55,
              },
              "value": "set",
            },
            "span": Span {
              "end": 75,
              "start": 48,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 75,
                "start": 57,
              },
              "value": "%player.maxhealth%",
            },
            "var": {
              "span": Span {
                "end": 54,
                "start": 53,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 80,
                "start": 81,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 80,
              "start": 76,
            },
            "op": {
              "span": Span {
                "end": 84,
                "start": 83,
              },
              "value": "set",
            },
            "span": Span {
              "end": 100,
              "start": 76,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 100,
                "start": 85,
              },
              "value": "%player.hunger%",
            },
            "var": {
              "span": Span {
                "end": 82,
                "start": 81,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 105,
                "start": 106,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 105,
              "start": 101,
            },
            "op": {
              "span": Span {
                "end": 109,
                "start": 108,
              },
              "value": "set",
            },
            "span": Span {
              "end": 129,
              "start": 101,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 129,
                "start": 110,
              },
              "value": "%player.experience%",
            },
            "var": {
              "span": Span {
                "end": 107,
                "start": 106,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 134,
                "start": 135,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 134,
              "start": 130,
            },
            "op": {
              "span": Span {
                "end": 138,
                "start": 137,
              },
              "value": "set",
            },
            "span": Span {
              "end": 153,
              "start": 130,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 153,
                "start": 139,
              },
              "value": "%player.level%",
            },
            "var": {
              "span": Span {
                "end": 136,
                "start": 135,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 158,
                "start": 159,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 158,
              "start": 154,
            },
            "op": {
              "span": Span {
                "end": 162,
                "start": 161,
              },
              "value": "set",
            },
            "span": Span {
              "end": 180,
              "start": 154,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 180,
                "start": 163,
              },
              "value": "%player.protocol%",
            },
            "var": {
              "span": Span {
                "end": 160,
                "start": 159,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 185,
                "start": 186,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 185,
              "start": 181,
            },
            "op": {
              "span": Span {
                "end": 189,
                "start": 188,
              },
              "value": "set",
            },
            "span": Span {
              "end": 209,
              "start": 181,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 209,
                "start": 190,
              },
              "value": "%player.location.x%",
            },
            "var": {
              "span": Span {
                "end": 187,
                "start": 186,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 214,
                "start": 215,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 214,
              "start": 210,
            },
            "op": {
              "span": Span {
                "end": 218,
                "start": 217,
              },
              "value": "set",
            },
            "span": Span {
              "end": 238,
              "start": 210,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 238,
                "start": 219,
              },
              "value": "%player.location.y%",
            },
            "var": {
              "span": Span {
                "end": 216,
                "start": 215,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 243,
                "start": 244,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 243,
              "start": 239,
            },
            "op": {
              "span": Span {
                "end": 247,
                "start": 246,
              },
              "value": "set",
            },
            "span": Span {
              "end": 267,
              "start": 239,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 267,
                "start": 248,
              },
              "value": "%player.location.z%",
            },
            "var": {
              "span": Span {
                "end": 245,
                "start": 244,
              },
              "value": "x",
            },
          },
          {
            "conditions": {
              "span": Span {
                "end": 274,
                "start": 272,
              },
              "value": [],
            },
            "ifActions": {
              "span": Span {
                "end": 592,
                "start": 275,
              },
              "value": [
                {
                  "holder": {
                    "span": Span {
                      "end": 285,
                      "start": 286,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 285,
                    "start": 281,
                  },
                  "op": {
                    "span": Span {
                      "end": 289,
                      "start": 288,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 313,
                    "start": 281,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 313,
                      "start": 290,
                    },
                    "value": "%player.location.pitch%",
                  },
                  "var": {
                    "span": Span {
                      "end": 287,
                      "start": 286,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 322,
                      "start": 323,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 322,
                    "start": 318,
                  },
                  "op": {
                    "span": Span {
                      "end": 326,
                      "start": 325,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 348,
                    "start": 318,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 348,
                      "start": 327,
                    },
                    "value": "%player.location.yaw%",
                  },
                  "var": {
                    "span": Span {
                      "end": 324,
                      "start": 323,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 357,
                      "start": 358,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 357,
                    "start": 353,
                  },
                  "op": {
                    "span": Span {
                      "end": 361,
                      "start": 360,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 385,
                    "start": 353,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 385,
                      "start": 362,
                    },
                    "value": "%player.group.priority%",
                  },
                  "var": {
                    "span": Span {
                      "end": 359,
                      "start": 358,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 394,
                      "start": 395,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 394,
                    "start": 390,
                  },
                  "op": {
                    "span": Span {
                      "end": 398,
                      "start": 397,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 421,
                    "start": 390,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 421,
                      "start": 399,
                    },
                    "value": "%player.parkour.ticks%",
                  },
                  "var": {
                    "span": Span {
                      "end": 396,
                      "start": 395,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 430,
                      "start": 431,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 430,
                    "start": 426,
                  },
                  "op": {
                    "span": Span {
                      "end": 434,
                      "start": 433,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 449,
                    "start": 426,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 449,
                      "start": 435,
                    },
                    "value": "%house.guests%",
                  },
                  "var": {
                    "span": Span {
                      "end": 432,
                      "start": 431,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 458,
                      "start": 459,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 458,
                    "start": 454,
                  },
                  "op": {
                    "span": Span {
                      "end": 462,
                      "start": 461,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 478,
                    "start": 454,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 478,
                      "start": 463,
                    },
                    "value": "%house.cookies%",
                  },
                  "var": {
                    "span": Span {
                      "end": 460,
                      "start": 459,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 487,
                      "start": 488,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 487,
                    "start": 483,
                  },
                  "op": {
                    "span": Span {
                      "end": 491,
                      "start": 490,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 507,
                    "start": 483,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 507,
                      "start": 492,
                    },
                    "value": "%house.players%",
                  },
                  "var": {
                    "span": Span {
                      "end": 489,
                      "start": 488,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 516,
                      "start": 517,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 516,
                    "start": 512,
                  },
                  "op": {
                    "span": Span {
                      "end": 520,
                      "start": 519,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 532,
                    "start": 512,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 532,
                      "start": 521,
                    },
                    "value": "%date.unix%",
                  },
                  "var": {
                    "span": Span {
                      "end": 518,
                      "start": 517,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 541,
                      "start": 542,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 541,
                    "start": 537,
                  },
                  "op": {
                    "span": Span {
                      "end": 545,
                      "start": 544,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 561,
                    "start": 537,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 561,
                      "start": 546,
                    },
                    "value": "%stat.player/x%",
                  },
                  "var": {
                    "span": Span {
                      "end": 543,
                      "start": 542,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 570,
                      "start": 571,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 570,
                    "start": 566,
                  },
                  "op": {
                    "span": Span {
                      "end": 574,
                      "start": 573,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 590,
                    "start": 566,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 590,
                      "start": 575,
                    },
                    "value": "%stat.global/x%",
                  },
                  "var": {
                    "span": Span {
                      "end": 572,
                      "start": 571,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "kwSpan": Span {
              "end": 271,
              "start": 269,
            },
            "matchAny": {
              "span": Span {
                "end": 271,
                "start": 272,
              },
              "value": false,
            },
            "span": Span {
              "end": 593,
              "start": 269,
            },
            "type": "CONDITIONAL",
          },
          {
            "conditions": {
              "span": Span {
                "end": 599,
                "start": 597,
              },
              "value": [],
            },
            "ifActions": {
              "span": Span {
                "end": 666,
                "start": 600,
              },
              "value": [
                {
                  "holder": {
                    "span": Span {
                      "end": 610,
                      "start": 611,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 610,
                    "start": 606,
                  },
                  "op": {
                    "span": Span {
                      "end": 614,
                      "start": 613,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 633,
                    "start": 606,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 633,
                      "start": 615,
                    },
                    "value": "%stat.team/x team%",
                  },
                  "var": {
                    "span": Span {
                      "end": 612,
                      "start": 611,
                    },
                    "value": "x",
                  },
                },
                {
                  "holder": {
                    "span": Span {
                      "end": 642,
                      "start": 643,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 642,
                    "start": 638,
                  },
                  "op": {
                    "span": Span {
                      "end": 646,
                      "start": 645,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 664,
                    "start": 638,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 664,
                      "start": 647,
                    },
                    "value": "%random.int/1 10%",
                  },
                  "var": {
                    "span": Span {
                      "end": 644,
                      "start": 643,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "kwSpan": Span {
              "end": 596,
              "start": 594,
            },
            "matchAny": {
              "span": Span {
                "end": 596,
                "start": 597,
              },
              "value": false,
            },
            "span": Span {
              "end": 666,
              "start": 594,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": Span {
        "end": 0,
        "start": 0,
      },
      "span": Span {
        "end": 666,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse player stats 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": Span {
          "end": 52,
          "start": 0,
        },
        "value": [
          {
            "holder": {
              "span": Span {
                "end": 4,
                "start": 5,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 4,
              "start": 0,
            },
            "op": {
              "span": Span {
                "end": 8,
                "start": 7,
              },
              "value": "set",
            },
            "span": Span {
              "end": 10,
              "start": 0,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 10,
                "start": 9,
              },
              "value": 5n,
            },
            "var": {
              "span": Span {
                "end": 6,
                "start": 5,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 15,
                "start": 16,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 15,
              "start": 11,
            },
            "op": {
              "span": Span {
                "end": 19,
                "start": 18,
              },
              "value": "set",
            },
            "span": Span {
              "end": 26,
              "start": 11,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 26,
                "start": 20,
              },
              "value": "%stat.player/x%",
            },
            "var": {
              "span": Span {
                "end": 17,
                "start": 16,
              },
              "value": "y",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 31,
                "start": 32,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 31,
              "start": 27,
            },
            "op": {
              "span": Span {
                "end": 35,
                "start": 34,
              },
              "value": "set",
            },
            "span": Span {
              "end": 52,
              "start": 27,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 52,
                "start": 36,
              },
              "value": "%stat.player/y%",
            },
            "var": {
              "span": Span {
                "end": 33,
                "start": 32,
              },
              "value": "z",
            },
          },
        ],
      },
      "kwSpan": Span {
        "end": 0,
        "start": 0,
      },
      "span": Span {
        "end": 52,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse shorthands 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": Span {
          "end": 209,
          "start": 0,
        },
        "value": [
          {
            "holder": {
              "span": Span {
                "end": 4,
                "start": 5,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 4,
              "start": 0,
            },
            "op": {
              "span": Span {
                "end": 8,
                "start": 7,
              },
              "value": "set",
            },
            "span": Span {
              "end": 15,
              "start": 0,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 15,
                "start": 9,
              },
              "value": "%stat.player/y%",
            },
            "var": {
              "span": Span {
                "end": 6,
                "start": 5,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 20,
                "start": 21,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 20,
              "start": 16,
            },
            "op": {
              "span": Span {
                "end": 24,
                "start": 23,
              },
              "value": "set",
            },
            "span": Span {
              "end": 37,
              "start": 16,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 37,
                "start": 25,
              },
              "value": "%stat.global/y%",
            },
            "var": {
              "span": Span {
                "end": 22,
                "start": 21,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 42,
                "start": 43,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 42,
              "start": 38,
            },
            "op": {
              "span": Span {
                "end": 46,
                "start": 45,
              },
              "value": "set",
            },
            "span": Span {
              "end": 62,
              "start": 38,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 62,
                "start": 47,
              },
              "value": "%stat.team/y team%",
            },
            "var": {
              "span": Span {
                "end": 44,
                "start": 43,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 67,
                "start": 68,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 67,
              "start": 63,
            },
            "op": {
              "span": Span {
                "end": 71,
                "start": 70,
              },
              "value": "set",
            },
            "span": Span {
              "end": 87,
              "start": 63,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 87,
                "start": 72,
              },
              "value": "%random.int/1 100%",
            },
            "var": {
              "span": Span {
                "end": 69,
                "start": 68,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 92,
                "start": 93,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 92,
              "start": 88,
            },
            "op": {
              "span": Span {
                "end": 96,
                "start": 95,
              },
              "value": "set",
            },
            "span": Span {
              "end": 103,
              "start": 88,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 103,
                "start": 97,
              },
              "value": "%player.health%",
            },
            "var": {
              "span": Span {
                "end": 94,
                "start": 93,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 108,
                "start": 109,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 108,
              "start": 104,
            },
            "op": {
              "span": Span {
                "end": 112,
                "start": 111,
              },
              "value": "set",
            },
            "span": Span {
              "end": 122,
              "start": 104,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 122,
                "start": 113,
              },
              "value": "%player.maxHealth%",
            },
            "var": {
              "span": Span {
                "end": 110,
                "start": 109,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 127,
                "start": 128,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 127,
              "start": 123,
            },
            "op": {
              "span": Span {
                "end": 131,
                "start": 130,
              },
              "value": "set",
            },
            "span": Span {
              "end": 138,
              "start": 123,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 138,
                "start": 132,
              },
              "value": "%player.hunger%",
            },
            "var": {
              "span": Span {
                "end": 129,
                "start": 128,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 143,
                "start": 144,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 143,
              "start": 139,
            },
            "op": {
              "span": Span {
                "end": 147,
                "start": 146,
              },
              "value": "set",
            },
            "span": Span {
              "end": 152,
              "start": 139,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 152,
                "start": 148,
              },
              "value": "%player.location.x%",
            },
            "var": {
              "span": Span {
                "end": 145,
                "start": 144,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 157,
                "start": 158,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 157,
              "start": 153,
            },
            "op": {
              "span": Span {
                "end": 161,
                "start": 160,
              },
              "value": "set",
            },
            "span": Span {
              "end": 166,
              "start": 153,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 166,
                "start": 162,
              },
              "value": "%player.location.y%",
            },
            "var": {
              "span": Span {
                "end": 159,
                "start": 158,
              },
              "value": "x",
            },
          },
          {
            "holder": {
              "span": Span {
                "end": 171,
                "start": 172,
              },
              "value": {
                "type": "player",
              },
            },
            "kwSpan": Span {
              "end": 171,
              "start": 167,
            },
            "op": {
              "span": Span {
                "end": 175,
                "start": 174,
              },
              "value": "set",
            },
            "span": Span {
              "end": 180,
              "start": 167,
            },
            "type": "CHANGE_VAR",
            "value": {
              "span": Span {
                "end": 180,
                "start": 176,
              },
              "value": "%player.location.z%",
            },
            "var": {
              "span": Span {
                "end": 173,
                "start": 172,
              },
              "value": "x",
            },
          },
          {
            "conditions": {
              "span": Span {
                "end": 187,
                "start": 185,
              },
              "value": [],
            },
            "ifActions": {
              "span": Span {
                "end": 209,
                "start": 188,
              },
              "value": [
                {
                  "holder": {
                    "span": Span {
                      "end": 198,
                      "start": 199,
                    },
                    "value": {
                      "type": "player",
                    },
                  },
                  "kwSpan": Span {
                    "end": 198,
                    "start": 194,
                  },
                  "op": {
                    "span": Span {
                      "end": 202,
                      "start": 201,
                    },
                    "value": "set",
                  },
                  "span": Span {
                    "end": 207,
                    "start": 194,
                  },
                  "type": "CHANGE_VAR",
                  "value": {
                    "span": Span {
                      "end": 207,
                      "start": 203,
                    },
                    "value": "%date.unix%",
                  },
                  "var": {
                    "span": Span {
                      "end": 200,
                      "start": 199,
                    },
                    "value": "x",
                  },
                },
              ],
            },
            "kwSpan": Span {
              "end": 184,
              "start": 182,
            },
            "matchAny": {
              "span": Span {
                "end": 184,
                "start": 185,
              },
              "value": false,
            },
            "span": Span {
              "end": 209,
              "start": 182,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": Span {
        "end": 0,
        "start": 0,
      },
      "span": Span {
        "end": 209,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;

exports[`Parser > parse teleport 1`] = `
{
  "diagnostics": [],
  "holders": [
    {
      "actions": {
        "span": Span {
          "end": 299,
          "start": 0,
        },
        "value": [
          {
            "kwSpan": Span {
              "end": 2,
              "start": 0,
            },
            "location": {
              "span": Span {
                "end": 26,
                "start": 3,
              },
              "value": {
                "type": "location_custom",
                "value": "1 1 1",
              },
            },
            "span": Span {
              "end": 26,
              "start": 0,
            },
            "type": "TELEPORT",
          },
          {
            "kwSpan": Span {
              "end": 29,
              "start": 27,
            },
            "location": {
              "span": Span {
                "end": 58,
                "start": 30,
              },
              "value": {
                "type": "location_custom",
                "value": "-1 1.1 1.1",
              },
            },
            "span": Span {
              "end": 58,
              "start": 27,
            },
            "type": "TELEPORT",
          },
          {
            "kwSpan": Span {
              "end": 61,
              "start": 59,
            },
            "location": {
              "span": Span {
                "end": 85,
                "start": 62,
              },
              "value": {
                "type": "location_custom",
                "value": "1 1 1",
              },
            },
            "span": Span {
              "end": 85,
              "start": 59,
            },
            "type": "TELEPORT",
          },
          {
            "kwSpan": Span {
              "end": 89,
              "start": 87,
            },
            "location": {
              "span": Span {
                "end": 113,
                "start": 90,
              },
              "value": {
                "type": "location_custom",
                "value": "^ ^ ^",
              },
            },
            "span": Span {
              "end": 113,
              "start": 87,
            },
            "type": "TELEPORT",
          },
          {
            "kwSpan": Span {
              "end": 116,
              "start": 114,
            },
            "location": {
              "span": Span {
                "end": 142,
                "start": 117,
              },
              "value": {
                "type": "location_custom",
                "value": "^10 ^ ^",
              },
            },
            "span": Span {
              "end": 142,
              "start": 114,
            },
            "type": "TELEPORT",
          },
          {
            "conditions": {
              "span": Span {
                "end": 149,
                "start": 147,
              },
              "value": [],
            },
            "ifActions": {
              "span": Span {
                "end": 299,
                "start": 150,
              },
              "value": [
                {
                  "kwSpan": Span {
                    "end": 158,
                    "start": 156,
                  },
                  "location": {
                    "span": Span {
                      "end": 185,
                      "start": 159,
                    },
                    "value": {
                      "type": "location_custom",
                      "value": "~1 ~ 1",
                    },
                  },
                  "span": Span {
                    "end": 185,
                    "start": 156,
                  },
                  "type": "TELEPORT",
                },
                {
                  "kwSpan": Span {
                    "end": 192,
                    "start": 190,
                  },
                  "location": {
                    "span": Span {
                      "end": 218,
                      "start": 193,
                    },
                    "value": {
                      "type": "location_custom",
                      "value": "~ ~ ~",
                    },
                  },
                  "span": Span {
                    "end": 218,
                    "start": 190,
                  },
                  "type": "TELEPORT",
                },
                {
                  "kwSpan": Span {
                    "end": 226,
                    "start": 224,
                  },
                  "location": {
                    "span": Span {
                      "end": 253,
                      "start": 227,
                    },
                    "value": {
                      "type": "location_custom",
                      "value": "1 1 1",
                    },
                  },
                  "span": Span {
                    "end": 253,
                    "start": 224,
                  },
                  "type": "TELEPORT",
                },
                {
                  "kwSpan": Span {
                    "end": 260,
                    "start": 258,
                  },
                  "location": {
                    "span": Span {
                      "end": 272,
                      "start": 261,
                    },
                    "value": {
                      "type": "location_spawn",
                    },
                  },
                  "span": Span {
                    "end": 272,
                    "start": 258,
                  },
                  "type": "TELEPORT",
                },
                {
                  "kwSpan": Span {
                    "end": 279,
                    "start": 277,
                  },
                  "location": {
                    "span": Span {
                      "end": 297,
                      "start": 280,
                    },
                    "value": {
                      "type": "location_invokers",
                    },
                  },
                  "span": Span {
                    "end": 297,
                    "start": 277,
                  },
                  "type": "TELEPORT",
                },
              ],
            },
            "kwSpan": Span {
              "end": 146,
              "start": 144,
            },
            "matchAny": {
              "span": Span {
                "end": 146,
                "start": 147,
              },
              "value": false,
            },
            "span": Span {
              "end": 299,
              "start": 144,
            },
            "type": "CONDITIONAL",
          },
        ],
      },
      "kwSpan": Span {
        "end": 0,
        "start": 0,
      },
      "span": Span {
        "end": 299,
        "start": 0,
      },
      "type": "UNKNOWN",
    },
  ],
}
`;
